# djangorestframework-kicksaw-auth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
djangorestframework_api_gateway_auth/: __init__.py  authentication.py
djangorestframework_kicksaw_auth/: __init__.py  authentication.py
